# cpp-vulkan

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compileShaders.sh
scripts/: compileShaders.ps1  compileShaders.sh
src/: main.cpp
src/api/: vkcontext.cpp  vkcontext.hpp  vkutils.cpp  vkutils.hpp
src/api/components/: vkpipeline.cpp  vkpipeline.hpp  vkshader.cpp  vkshader.hpp  vkswapchain.cpp  vkswapchain.hpp
src/resources/shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv
src/utils/: debug.hpp  file.hpp  math.hpp
